# SLE

./: CMakeLists.txt
data/: tridiag_1.txt  tridiag_2.txt
src/: CMakeLists.txt
src/code/: CSR.hpp  dense.hpp  solvers.hpp  tridiag.hpp  tridiagonal_solver.cpp  tridiagonal_solver.hpp  vector.hpp
tests/: CMakeLists.txt  test_csr.cpp  test_dense.cpp  test_tridiag.cpp  tests.cpp
